# ultralight-tags

./: 404.html  CMakeCache.txt  CMakeLists.txt  README.md  index.html  index.xml  offline-search-index.0111c5cff4714db078e477890a31f2c3.json  offline-search-index.3c9fbb5fe89aa2ae258dffb711ee3ddb.json  offline-search-index.68c8824c7740aa0021d5ce0c3cdaefe8.json  offline-search-index.8990f2114decd19594221ff36b120036.json  offline-search-index.c013c09510c257b67e6f452d612acaf1.json  offline-search-index.f81612d4f54f79a79c20958d5fc456e1.json  sitemap.xml  windows-build-notes.md
hardware/: .gitignore  CMakeLists.txt  README.md
hardware/BaseConnetorPower/: BaseConnetorPower.kicad_pcb  BaseConnetorPower.kicad_pro  BaseConnetorPower.kicad_sch  MultiCharger.kibot.yaml  Multicharger-jlcpcb_missing3Dmodels.txt  bom.py  fp-lib-table  kibot_errors.filter  sym-lib-table
hardware/BaseDaughterTemplate/: #auto_saved_files#  BaseDaughterTemplate.kicad_pcb  BaseDaughterTemplate.kicad_pro  BaseDaughterTemplate.kicad_sch  CMakeLists.txt  fp-lib-table
hardware/BitPresTag/: BitPresTag.kicad_pcb  BitPresTag.kicad_pro  BitPresTag.kicad_sch  fp-lib-table  mergebom.py
hardware/BitPresTagBreakout/: BitPresTagBreakout.kibot.yaml  BitPresTagBreakout.kicad_pcb  BitPresTagBreakout.kicad_pro  BitPresTagBreakout.kicad_sch  CMakeLists.txt  sym-lib-table
hardware/BitTagNG/: BitTagNG.kibot.yaml  BitTagNG.kicad_pcb  BitTagNG.kicad_pro  BitTagNG.kicad_sch  BitTagNG.xml  BitTagNG.xml-pro  fp-lib-table  sym-lib-table
hardware/BitTagNG-LIS2DU12/: BitTagNG-LIS2DU12.kicad_pcb  BitTagNG-LIS2DU12.kicad_pro  BitTagNG-LIS2DU12.kicad_sch  sym-lib-table
hardware/BitTagv5/: BitTagv5.kibot.yaml  (+5 more)
(+494 files in other folders)
